--- a/travel/sass/components/_footer.scss
+++ b/travel/sass/components/_footer.scss
@@ -8,7 +8,8 @@ footer {
   @include media-mobile {
     background-image: url(../images/footer-mobile.jpg);
     height: 65px;
-    width: 390px;
+    min-width: 390px;
+    overflow-x: hidden;
   }
 }
 
