--- a/travel/sass/components/_stories.scss
+++ b/travel/sass/components/_stories.scss
@@ -10,7 +10,7 @@
 
         @include media-mobile {
             background-image: url(../images/stories-mobile.jpg);
-            width: 390px;
+            overflow-x:hidden;
         }
 
         &-opacity {
