--- a/travel/sass/abstract/_mixins.scss
+++ b/travel/sass/abstract/_mixins.scss
@@ -8,3 +8,7 @@
 @mixin media-mobile {
     @media (max-width: $mobile-width) {@content;}
 }
+
+@mixin media-minmobile {
+    @media (max-width: $minmobile-width) {@content;}
+}
