feat: added dots to 320px

--- a/travel/sass/components/_destination.scss
+++ b/travel/sass/components/_destination.scss
@@ -156,6 +156,10 @@
         width: 36px;
         display: flex;
         justify-content: space-between;
+         @include media-minmobile {
+           top:150px;
+           left: 132px
+        }
     }
 
     .dot-mobile {
