--- a/travel/sass/style.css
+++ b/travel/sass/style.css
@@ -784,7 +784,7 @@ header {
     background-color: #F2785C;
     border-radius: 10px;
     z-index: 5;
-    transition: left 0.9s ease 0s;
+    transition: left 0.9s ease;
   }
 }
 
@@ -815,6 +815,8 @@ header {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
+    background: rgba(0, 0, 0, 0.5);
+    transition: 0.8s all;
   }
 }
 
