feat: added transition to burger

--- a/travel/sass/base/_humburger.scss
+++ b/travel/sass/base/_humburger.scss
@@ -10,6 +10,7 @@
     width: 30px;
     height: 15px;
     margin-bottom: 6px;
+     transition: all 0.8s ease;
     }
 }
 
@@ -19,6 +20,7 @@
     top:-20px;
     width: 30px;
     height: 15px;
+     transition: all 0.8s ease;
     }
 }
 .burger._active span {
