feat:added gradient to mobile

--- a/travel/sass/components/_header.scss
+++ b/travel/sass/components/_header.scss
@@ -20,7 +20,7 @@ header {
     padding: 25px 0 24px 0;
 
     @include media-mobile {
-        background: none;
+        background: linear-gradient(to bottom, rgba(13,96,111,0.7), rgba(13,96,111,0) 70%);
         box-shadow: none;
         padding-top: 45px;
     }
