--- a/travel/sass/style.css
+++ b/travel/sass/style.css
@@ -401,7 +401,7 @@ ul {
   box-sizing: border-box;
 }
 
-.footer__text, .destinations__text-mobile span, .destinations__text span, .button_long, .button, .navigation__link, h2 {
+.popup__button, .footer__text, .destinations__text-mobile span, .destinations__text span, .button_long, .button, .navigation__link, h2 {
   font-family: "Red Hat Text", sans-serif;
 }
 
@@ -607,6 +607,7 @@ p {
     width: 30px;
     height: 15px;
     transition: all 0.8s ease;
+    z-index: 40;
   }
 }
 
@@ -795,6 +796,7 @@ header {
   .header__navigation._active {
     transform: translate(0);
     transition: all 0.8s ease;
+    z-index: 30;
   }
 }
 
@@ -807,12 +809,24 @@ header {
   }
 }
 
+body._lock {
+  overflow: hidden;
+}
 @media (max-width: 390px) {
   body._lock {
     overflow: hidden;
   }
 }
 
+.block-page._active {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  background: rgba(0, 0, 0, 0.5);
+  transition: 0.8s all;
+  z-index: 10;
+}
 @media (max-width: 390px) {
   .block-page._active {
     position: fixed;
@@ -1029,7 +1043,19 @@ input {
   }
 }
 .destinations__slide {
-  transform: translateX(-540px);
+  position: absolute;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* THIS creates the animation! */
+  transition: transform 1s;
+}
+.destinations__slide-left {
+  transform: translateX(-10%);
+}
+.destinations__slide-right {
+  transform: translateX(10%);
 }
 .destinations__img {
   position: relative;
@@ -1101,6 +1127,11 @@ input {
     width: 300px;
   }
 }
+@media (max-width: 390px) {
+  .destinations__slide-mobile {
+    position: relative;
+  }
+}
 .destinations__img-mobile {
   border-radius: 16px;
   position: relative;
@@ -1142,7 +1173,7 @@ input {
 }
 .destinations__dots-mobile {
   position: absolute;
-  z-index: 5;
+  z-index: 15;
   top: 190px;
   left: 162px;
   width: 36px;
@@ -1333,6 +1364,223 @@ footer {
 @media (max-width: 390px) {
   .footer__icons {
     margin: 0 auto;
+  }
+}
+
+.popup {
+  position: absolute;
+  width: 650px;
+  height: 660px;
+  top: -3%;
+  left: 25%;
+  border-radius: 16px;
+  margin: 0 auto;
+  background: linear-gradient(177.09deg, #FFFFFF 6.15%, #0D606F 202.69%);
+  z-index: 1000;
+}
+@media (max-width: 390px) {
+  .popup {
+    max-width: 360px;
+    height: 660px;
+    left: 6px;
+    top: 0;
+  }
+}
+@media (max-width: 320px) {
+  .popup {
+    max-width: 300px;
+    height: 700px;
+    left: 0px;
+    top: 0;
+  }
+}
+.popup__wrapper {
+  padding: 25px 45px;
+  display: flex;
+  flex-direction: column;
+}
+.popup__title {
+  font-family: "Aleo", serif;
+  color: #0D606F;
+  font-size: 32px;
+  font-weight: 700;
+  font-style: normal;
+  line-height: 38.4px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 30px;
+}
+@media (max-width: 390px) {
+  .popup__title {
+    font-size: 24px;
+    font-weight: 700;
+    font-style: normal;
+    line-height: 29px;
+  }
+}
+.popup__button {
+  width: 560px;
+  height: 56px;
+  margin: 0 auto;
+  border-radius: 10px;
+  border-style: none;
+  color: #FFFFFF;
+  font-size: 20px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 26px;
+  box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
+  display: flex;
+  align-items: center;
+}
+@media (max-width: 390px) {
+  .popup__button {
+    max-width: 360px;
+    width: 100%;
+    font-size: 14px;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 24px;
+  }
+}
+@media (max-width: 320px) {
+  .popup__button {
+    font-size: 12px;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 24px;
+  }
+}
+.popup__button-blue {
+  background-color: #1877F2;
+  margin-bottom: 20px;
+  padding-left: 29%;
+}
+.popup__button-blue::before {
+  content: " ";
+  background-image: url(../images/facebook.png);
+  height: 24px;
+  width: 24px;
+  display: flex;
+  margin-right: 15px;
+}
+.popup__button-white {
+  color: #0D606F;
+  background-color: #FFFFFF;
+  margin-bottom: 30px;
+  padding-left: 31%;
+}
+.popup__button-white::before {
+  content: " ";
+  background-image: url(../images/google.png);
+  height: 24px;
+  width: 24px;
+  display: flex;
+  margin-right: 15px;
+}
+.popup__button-darkblue {
+  background-color: #0D606F;
+  margin-top: 15px;
+  padding-left: 44.5%;
+}
+.popup__line {
+  font-family: "Aleo", serif;
+  font-size: 20px;
+  font-weight: 700;
+  font-style: normal;
+  line-height: 24px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
+}
+.popup__line::before {
+  display: flex;
+  content: " ";
+  height: 2px;
+  width: 261px;
+  background: rgba(13, 96, 111, 0.5);
+}
+.popup__line::after {
+  display: flex;
+  content: " ";
+  height: 2px;
+  width: 261px;
+  background: rgba(13, 96, 111, 0.5);
+}
+.popup__input-text {
+  font-family: "Aleo", serif;
+  font-size: 16px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 19.2px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+.popup__input {
+  height: 54px;
+  margin-bottom: 10px;
+  padding: 25px 41px;
+}
+.popup__href {
+  font-family: "Aleo", serif;
+  font-size: 15px;
+  font-weight: 700;
+  font-style: normal;
+  line-height: 18px;
+  color: #0D606F;
+  margin: 0 auto;
+  margin-top: 7px;
+}
+.popup__hr {
+  border: none;
+  height: 2px;
+  color: #0D606F;
+  background-color: #0D606F;
+  width: 560px;
+  margin: 0 auto;
+  margin-top: 26px;
+  margin-bottom: 20px;
+}
+@media (max-width: 390px) {
+  .popup__hr {
+    max-width: 360px;
+    width: 100%;
+  }
+}
+.popup__href-text {
+  font-family: "Aleo", serif;
+  font-size: 15px;
+  font-weight: 700;
+  font-style: normal;
+  line-height: 18px;
+  color: #0D606F;
+  margin: 0 auto;
+  margin-bottom: 23px;
+}
+
+.signup__popup {
+  height: 436px;
+  display: none;
+}
+.signup__popup .popup__title {
+  margin-bottom: 20px;
+}
+
+.hidden {
+  display: none;
+}
+
+@media (max-width: 390px) {
+  .overlay {
+    position: fixed;
+    width: 100%;
+    height: 1100%;
+    overflow: hidden;
+    background: rgba(0, 0, 0, 0.5);
+    transition: 0.8s all;
+    z-index: 10;
+    margin-left: -15px;
   }
 }
 
